Fix Unix build