@@ -5,10 +5,7 @@ import lscript.interpreting.types.LByte;
 import lscript.interpreting.types.LList;
 import lscript.interpreting.types.LString;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 /**
  * Holds constant Maps for ease of parsing and interpreting
@@ -33,20 +30,20 @@ public class Constants {
      */
     private Constants() {
         TYPES = new HashMap<>();
-        TYPES.put("int", List.of("int", "float", "num"));
-        TYPES.put("float", List.of("float", "num"));
+        TYPES.put("int", Arrays.asList("int", "float", "num"));
+        TYPES.put("float", Arrays.asList("float", "num"));
         TYPES.put("var", null);
         TYPES.put("const", null);
-        TYPES.put("bool", List.of("bool"));
-        TYPES.put("function", List.of("function"));
-        TYPES.put("void", List.of());
-        TYPES.put("str", List.of("str"));
-        TYPES.put("nullType", List.of());
-        TYPES.put("list", List.of("list"));
-        TYPES.put("map", List.of("map"));
-        TYPES.put("num", List.of("float"));
-        TYPES.put("file", List.of("file"));
-        TYPES.put("byte", List.of("int", "float", "num"));
+        TYPES.put("bool", Collections.singletonList("bool"));
+        TYPES.put("function", Collections.singletonList("function"));
+        TYPES.put("void", Collections.emptyList());
+        TYPES.put("str", Collections.singletonList("str"));
+        TYPES.put("nullType", Collections.emptyList());
+        TYPES.put("list", Collections.singletonList("list"));
+        TYPES.put("map", Collections.singletonList("map"));
+        TYPES.put("num", Collections.singletonList("float"));
+        TYPES.put("file", Collections.singletonList("file"));
+        TYPES.put("byte", Arrays.asList("int", "float", "num"));
 
         CONVERT_CLASSES = new HashMap<>();
         CONVERT_CLASSES.put("str", LString.class);
@@ -55,7 +52,7 @@ public class Constants {
 
         DESIGNATED_KEYWORDS = new ArrayList<>();
         DESIGNATED_KEYWORDS.addAll(TYPES.keySet());
-        DESIGNATED_KEYWORDS.addAll(List.of("if", "elif", "else", "while", "for", "func", "return", "continue", "break", "import", "from", "as"));
+        DESIGNATED_KEYWORDS.addAll(Arrays.asList("if", "elif", "else", "while", "for", "func", "return", "continue", "break", "import", "from", "as"));
 
         EQUAL_MODS = new HashMap<>();
         HashMap<String, TokenEnum> plusMod = new HashMap<>();
@@ -88,11 +85,11 @@ public class Constants {
         modMod.put("with", TokenEnum.TT_MODEQ);
         modMod.put("without", TokenEnum.TT_MOD);
 
-        EQUAL_MODS.put('+', plusMod);
-        EQUAL_MODS.put('-', minusMod);
-        EQUAL_MODS.put('*', mulMod);
-        EQUAL_MODS.put('/', divMod);
-        EQUAL_MODS.put('^', powMod);
-        EQUAL_MODS.put('%', modMod);
+        EQUAL_MODS.put(Character.valueOf('+'), plusMod);
+        EQUAL_MODS.put(Character.valueOf('-'), minusMod);
+        EQUAL_MODS.put(Character.valueOf('*'), mulMod);
+        EQUAL_MODS.put(Character.valueOf('/'), divMod);
+        EQUAL_MODS.put(Character.valueOf('^'), powMod);
+        EQUAL_MODS.put(Character.valueOf('%'), modMod);
     }
 }
