@@ -9,6 +9,7 @@ import lscript.lexing.Token;
 import lscript.interpreting.RTResult;
 import lscript.parsing.nodes.*;
 
+import java.util.Collections;
 import java.util.List;
 
 import static lscript.TokenEnum.*;
@@ -40,20 +41,20 @@ public abstract class Value {
     public static Node getDefaultValue(String type, Position posStart) {
         switch (type) {
             case "int":
-                return new NumberNode(new Token(TT_INT, 0, posStart, posStart.copy().advance(null), null));
+                return new NumberNode(new Token(TT_INT, Integer.valueOf(0), posStart, posStart.copy().advance(null), null));
             case "float":
             case "num":
-                return new NumberNode(new Token(TT_FLOAT, 0.0f, posStart, posStart.copy().advance(null).advance(null).advance(null), null));
+                return new NumberNode(new Token(TT_FLOAT, Float.valueOf(0.0f), posStart, posStart.copy().advance(null).advance(null).advance(null), null));
             case "str":
                 return new StringNode(new Token(TT_STR, "", posStart, posStart.copy(), null));
             case "list":
-                return new ListNode(List.of(), posStart, posStart.copy());
+                return new ListNode(Collections.emptyList(), posStart, posStart.copy());
             case "bool":
                 return new VarAccessNode(new Token(TT_KW, "false", posStart, posStart.copy().advance(null).advance(null).advance(null).advance(null).advance(null), null));
             case "byte":
-                return new NumberNode(new Token(TT_INT, 0x00, posStart, posStart.copy().advance(null), null));
+                return new NumberNode(new Token(TT_INT, Integer.valueOf(0x00), posStart, posStart.copy().advance(null), null));
             case "map":
-                return new MapNode(List.of(), posStart, posStart.copy());
+                return new MapNode(Collections.emptyList(), posStart, posStart.copy());
             default:
                 return new VarAccessNode(new Token(TT_KW, "null", posStart, posStart.copy().advance(null).advance(null).advance(null).advance(null), null));
         }
