@@ -6,12 +6,13 @@ import lscript.interpreting.RTResult;
 import lscript.interpreting.types.BuiltInFunction;
 import lscript.interpreting.types.LString;
 
+import java.util.Collections;
 import java.util.List;
 
 public class StrBuiltin implements IExecutable {
     @Override
     public List<List<Tuple<String, String>>> getArgNames() {
-        return List.of(List.of(Tuple.of("var", "val")));
+        return Collections.singletonList(Collections.singletonList(Tuple.of("var", "val")));
     }
 
     @Override
