@@ -9,12 +9,14 @@ import lscript.interpreting.types.LString;
 import lscript.interpreting.types.Value;
 import lscript.interpreting.types.builtins.IExecutable;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class JoinBuiltin implements IExecutable {
     @Override
     public List<List<Tuple<String, String>>> getArgNames() {
-        return List.of(List.of(Tuple.of("list", "toJoin"), Tuple.of("str", "delimiter")));
+        return Collections.singletonList(Arrays.asList(Tuple.of("list", "toJoin"), Tuple.of("str", "delimiter")));
     }
 
     @Override
