@@ -8,12 +8,14 @@ import lscript.interpreting.types.LFloat;
 import lscript.interpreting.types.LNumber;
 import lscript.interpreting.types.builtins.IExecutable;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class RootBuiltin implements IExecutable {
     @Override
     public List<List<Tuple<String, String>>> getArgNames() {
-        return List.of(List.of(Tuple.of("num", "val"), Tuple.of("num", "power")));
+        return Collections.singletonList(Arrays.asList(Tuple.of("num", "val"), Tuple.of("num", "power")));
     }
 
     @Override
