@@ -7,6 +7,7 @@ import lscript.interpreting.types.BuiltInFunction;
 import lscript.interpreting.types.LFloat;
 import lscript.interpreting.types.builtins.IExecutable;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
@@ -14,7 +15,7 @@ public class RandBuiltin implements IExecutable {
     Random random = new Random();
     @Override
     public List<List<Tuple<String, String>>> getArgNames() {
-        return List.of(List.of());
+        return Collections.singletonList(Collections.emptyList());
     }
 
     @Override
